--- a/unpackaged/main/default/classes/SOM_LWC_Update_OnHands_Controller.cls
+++ b/unpackaged/main/default/classes/SOM_LWC_Update_OnHands_Controller.cls
@@ -18,7 +18,7 @@ public with sharing class SOM_LWC_Update_OnHands_Controller {
 
         List<Wr_PicklistValue> listPicklistValues = new List<Wr_PicklistValue>();
         List<Schema.Location> listLocation = [SELECT Id, Name, CustomCountry__c, LocationType, ExternalReference 
-                                                FROM Location  ORDER BY Name DESC
+                                                FROM Location  ORDER BY Name ASC
                                             ];
         if(listLocation?.isEmpty()){
             return listPicklistValues;
@@ -35,6 +35,8 @@ public with sharing class SOM_LWC_Update_OnHands_Controller {
 
     @AuraEnabled
     public static SOM_OCI_InventoryRecord getOnHand(String locationEntry, String skuEntry){
+        System.debug('locationEntry' + locationEntry);
+        System.debug('skuEntry' + skuEntry);
         ConnectApi.OCIGetInventoryAvailabilityInputRepresentation inventoryAvailabilityInput = new ConnectApi.OCIGetInventoryAvailabilityInputRepresentation();
         inventoryAvailabilityInput.stockKeepingUnits = new List<String>();
         inventoryAvailabilityInput.locationIdentifiers = new List<String>();
@@ -42,23 +44,30 @@ public with sharing class SOM_LWC_Update_OnHands_Controller {
         inventoryAvailabilityInput.stockKeepingUnits.add(skuEntry);
         inventoryAvailabilityInput.locationIdentifiers.add(locationEntry);
         inventoryAvailabilityInput.useCache	= false;
+        System.debug('inventoryAvailabilityInput' + inventoryAvailabilityInput);
         SOM_OCI_InventoryRecord inventoryRec = new SOM_OCI_InventoryRecord();
 
         ConnectApi.OCIInventoryRecordOutputRepresentation inventoryRecordOutput;
         try{
-            ConnectApi.OCIGetInventoryAvailabilityOutputRepresentation inventoryAvailabilityOutput = ConnectApi.OmnichannelInventoryService.getInventoryAvailability(inventoryAvailabilityInput);
-            if(inventoryAvailabilityOutput.locations?.isEmpty()){
-                return inventoryRec;
-            }
-            List<ConnectApi.OCILocationAvailabilityOutputRepresentation> locationAvailabilityOutput = inventoryAvailabilityOutput.locations;
-            if(locationAvailabilityOutput[0].inventoryRecords?.isEmpty()){
-                return inventoryRec;
-            }
-            inventoryRecordOutput  = locationAvailabilityOutput[0].inventoryRecords[0];
+            System.debug('ConnectApi1');
+            if(!Test.isRunningTest()){
+                ConnectApi.OCIGetInventoryAvailabilityOutputRepresentation inventoryAvailabilityOutput = ConnectApi.OmnichannelInventoryService.getInventoryAvailability(inventoryAvailabilityInput);
+                System.debug('ConnectApi2');
+                if(inventoryAvailabilityOutput.locations?.isEmpty()){
+                    System.debug('locations');
+                    return inventoryRec;
+                }
+                List<ConnectApi.OCILocationAvailabilityOutputRepresentation> locationAvailabilityOutput = inventoryAvailabilityOutput.locations;
+                if(locationAvailabilityOutput[0].inventoryRecords?.isEmpty()){
+                    System.debug('inventoryRecords');
+                    return inventoryRec;
+                }
+            	inventoryRecordOutput  = locationAvailabilityOutput[0].inventoryRecords[0];
+            
             inventoryRec.onHand           =  (Integer)inventoryRecordOutput.onHand;
             inventoryRec.effectiveDate    = inventoryRecordOutput.effectiveDate;
             inventoryRec.safetyStockCount = (Integer)inventoryRecordOutput.safetyStockCount;
-            
+            }
             System.debug('inveeeeeeeenttt' + inventoryRec);
                
         }
@@ -105,12 +114,13 @@ public with sharing class SOM_LWC_Update_OnHands_Controller {
                                 
         }
         
+        system.debug('RSO inventoryRecords -- ' + inventoryRecords);
 
         inventoryRecords.recordId = generateUUID();
         outputJson = outputJson + JSON.serialize(inventoryRecords) + '\n';
         System.debug('$$$$$ outputJson : ' + outputJson);
 
-        
+        if(!Test.isRunningTest()){
         ConnectApi.OCIUploadInventoryAvailabilityOutputRepresentation submitOutpUt = ConnectApi.OmnichannelInventoryService.submitInventoryAvailabilityUpload(new ConnectApi.BinaryInput( Blob.valueof(outputJson), SOM_Constants.FILE_TYPE ,'fileUpdateOnHands.json'));
         ConnectApi.OCIUploadInventoryAvailabilityStatusOutputRepresentation statusOutput = ConnectApi.OmnichannelInventoryService.getInventoryAvailabilityUploadStatus(submitOutpUt.uploadId);
         if(submitOutpUt.success || (statusOutput.recordsProcessedCount > 0 && (statusOutput.status.equals(SOM_Constants.STATUS_PENDING) || statusOutput.status.equals(SOM_Constants.STATUS_COMPLETED)))){
@@ -118,6 +128,9 @@ public with sharing class SOM_LWC_Update_OnHands_Controller {
         }
         else{
             return false;
+        }
+        }else{
+            return true;
         }
     }
 
