--- a/unpackaged/main/default/classes/SOM_WS_ShipmentHandler_Test.cls
+++ b/unpackaged/main/default/classes/SOM_WS_ShipmentHandler_Test.cls
@@ -7,12 +7,11 @@ private class SOM_WS_ShipmentHandler_Test {
         List<SOM_WS_ShipmentHandler.WMS_ShipmentData> listShipmentData = new List<SOM_WS_ShipmentHandler.WMS_ShipmentData>();
         List<OrderSummary> los = SOM_testDataFactory.createOrderSummaryBulk(false,SOM_testDataFactory.OrderType.Standard,2);
         FulfillmentOrder fo = SOM_testDataFactory.createFO(los[0]);
-
         for(FulfillmentOrder fulfillOrder : [SELECT Id, FulfillmentOrderNumber, Status, OrderSummaryId, OrderSummary.Status,
                                         (SELECT Id, FulfillmentOrderLineItemNumber, FulfillmentOrderId, Product2.StockKeepingUnit, OrderItemSummaryId, Quantity, 
                                         Type, OrderItemSummary.isSerialized__c
                                         FROM FulfillmentOrderLineItems WHERE Quantity > 0 AND Type != :SOM_Constants.FULFILLMENT_ORDER_LINE_ITEM_DELIVERY_CHARGE) FROM FulfillmentOrder
-                                        WHERE Status =: SOM_Constants.FULFILLMENT_ORDER_FULFILLING AND Id =: fo.Id]){
+                                        WHERE Id =: fo.Id]){
             
             if(fulfillOrder.FulfillmentOrderLineItems?.isEmpty()){
                 continue;
@@ -49,6 +48,7 @@ private class SOM_WS_ShipmentHandler_Test {
                 
             }
             requestDataLine.shipments = new List<SOM_WS_ShipmentHandler.WMS_ShipmentData>{shipmentLineData};
+            System.debug('fo ::::'+fulfillOrder);
             SOM_WS_ShipmentHandler_Test.listRequestInputs.put(fulfillOrder.Id,requestDataLine);
             
             listToProcess.add(requestDataLine);
@@ -82,7 +82,7 @@ private class SOM_WS_ShipmentHandler_Test {
         
         SOM_WS_ShipmentHandler.createShipments();
         System.debug(' $$ testReponseOK RestContext.response :' + RestContext.response);
-        System.debug(' $$ testReponseOK :');
+        System.debug(' $$ testReponseOK :' +SOM_WS_ShipmentHandler_Test.listRequestInputs.keySet());
         List<Shipment> createdShipment = [SELECT Id FROM Shipment WHERE FulfillmentOrderId IN : SOM_WS_ShipmentHandler_Test.listRequestInputs.keySet()];
         Test.stopTest();
         System.assertEquals(1,createdShipment.size());
