--- a/unpackaged/main/default/classes/SOM_WS_PickedInStoreShipmentHnadler_Test.cls
+++ b/unpackaged/main/default/classes/SOM_WS_PickedInStoreShipmentHnadler_Test.cls
@@ -18,6 +18,7 @@ private class SOM_WS_PickedInStoreShipmentHnadler_Test {
     public static boolean testPassOK = false ;
     public static boolean list_items_to_ship_empty = false ;
     public static boolean no_fulfillmentOrderLineItem_exist = false ;
+    public static Map<Id, String> mapOItemSKU = new Map<Id, String>();
 
     @isTest(seeAllData = true)
     public static void setupData() {
@@ -37,6 +38,12 @@ private class SOM_WS_PickedInStoreShipmentHnadler_Test {
         for (OrderSummary variable : los) {
             orderSummaryIds.add(variable.Id);
         }
+
+        List<FulfillmentOrderLineItem> folis = [SELECT ID, OrderItemSummaryId, OrderItemSummary.StockKeepingUnit FROM FulfillmentOrderLineItem WHERE FulfillmentOrder.OrderSummaryId IN: orderSummaryIds];
+        for(FulfillmentOrderLineItem foli : folis){
+            mapOItemSKU.put(foli.OrderItemSummaryId, foli.OrderItemSummary.StockKeepingUnit);
+        }
+        
         System.debug('ordersummaryIds  +'+orderSummaryIds);
         for(OrderSummary os : [SELECT ID, OrderNumber, (SELECT Id,StockKeepingUnit,Quantity,isSerialized__c FROM OrderItemSummaries where Type != :SOM_Constants.FULFILLMENT_ORDER_LINE_ITEM_DELIVERY_CHARGE) FROM OrderSummary where ID IN :orderSummaryIds]) {
             SOM_WS_PickedInStoreShipmentHnadler.WMS_OrderPickedinStoreRequest requestDataOrderPickedinStore = new SOM_WS_PickedInStoreShipmentHnadler.WMS_OrderPickedinStoreRequest();
@@ -55,6 +62,7 @@ private class SOM_WS_PickedInStoreShipmentHnadler_Test {
             else {
                 requestDataOrderPickedinStore.item = convertedList(os.OrderItemSummaries);
             }
+            System.debug('requestDataOrderPickedinStore ::: ' +requestDataOrderPickedinStore);
             SOM_WS_PickedInStoreShipmentHnadler_Test.listRequestInputs.put(os.OrderNumber,requestDataOrderPickedinStore);
         }
     }
@@ -63,36 +71,40 @@ private class SOM_WS_PickedInStoreShipmentHnadler_Test {
     private static List<SOM_WS_PickedInStoreShipmentHnadler.WMS_Item> convertedList(List<OrderItemSummary> olis) {
         List<SOM_WS_PickedInStoreShipmentHnadler.WMS_Item> listOrderItemsData = new List<SOM_WS_PickedInStoreShipmentHnadler.WMS_Item>();
         for(OrderItemSummary ois : olis) {
-            SOM_WS_PickedInStoreShipmentHnadler.WMS_Item wms = new SOM_WS_PickedInStoreShipmentHnadler.WMS_Item();
-            List<String> serialNumbers = new List<String>();
-            wms.sku = ois.StockKeepingUnit;
-            wms.qty = (Integer) ois.Quantity + toOverQuantity;
-            if(ois.isSerialized__c){
-                for(Integer counter = 0 ; counter < ois.Quantity ; counter++){
-                    serialNumbers.add('12345678912345678');
-                }
-                wms.serialNumber = serialNumbers;
-            }
-            if(serialNumberisNull == true) {
-                if(!ois.isSerialized__c)
-                    if(wms.qty == 1)
-                        wms.serialNumber = new List<String>{'12345678912345678'};
-                    if(wms.qty == 2)
-                        wms.serialNumber = new List<String>{'12345678912345678','78945612336925814'};
-            }
-            if(QtySerialNumber == true){
-                if(wms.qty > 1){
-                    wms.serialNumber = new List<String>{'12345678912345678'}; 
-                }
-            }
-            if(MissingSerialNumber == true) {
+            if(mapOItemSKU.containsKey(ois.Id)){
+                SOM_WS_PickedInStoreShipmentHnadler.WMS_Item wms = new SOM_WS_PickedInStoreShipmentHnadler.WMS_Item();
+                List<String> serialNumbers = new List<String>();
+                wms.sku = ois.StockKeepingUnit;
+                wms.qty = (Integer) ois.Quantity + toOverQuantity;
                 if(ois.isSerialized__c){
-                    wms.serialNumber = null;
-                    System.debug('yoyoyo');
+                    for(Integer counter = 0 ; counter < ois.Quantity ; counter++){
+                        serialNumbers.add('12345678912345678');
+                    }
+                    wms.serialNumber = serialNumbers;
                 }
+                if(serialNumberisNull == true) {
+                    if(!ois.isSerialized__c)
+                        if(wms.qty == 1)
+                            wms.serialNumber = new List<String>{'12345678912345678'};
+                        if(wms.qty == 2)
+                            wms.serialNumber = new List<String>{'12345678912345678','78945612336925814'};
+                }
+                if(QtySerialNumber == true){
+                    if(wms.qty > 1){
+                        wms.serialNumber = new List<String>{'12345678912345678'}; 
+                    }
+                }
+                if(MissingSerialNumber == true) {
+                    if(ois.isSerialized__c){
+                        wms.serialNumber = null;
+                        System.debug('yoyoyo');
+                    }
+                }
+                listOrderItemsData.add(wms);
             }
-            listOrderItemsData.add(wms);
+
         }
+
         return listOrderItemsData;
     }
     // end method
@@ -119,7 +131,7 @@ private class SOM_WS_PickedInStoreShipmentHnadler_Test {
         System.debug(' $$ testReponseOK :');
         Test.stopTest();
         Map<String,Object> result = (Map<String,Object>) JSON.deserializeUntyped(RestContext.response.responseBody.tostring());
-        //System.assert(String.valueOf(result.get('Response')).contains('Error Data Request Body Empty'));
+        System.assert(String.valueOf(result.get('Response')).contains('Error Data Request Body Empty'));
     }
 
 
@@ -148,7 +160,7 @@ private class SOM_WS_PickedInStoreShipmentHnadler_Test {
         System.debug(' $$ testReponseOK :');
         Test.stopTest();
         Map<String,Object> result = (Map<String,Object>) JSON.deserializeUntyped(RestContext.response.responseBody.tostring());
-        //System.assertEquals('Fulfillment Order or Order Summary are not valid - there status should be in : fulfilling, partially fulfilled',result.get('Response'));
+        System.assertEquals('Fulfillment Order or Order Summary are not valid - there status should be in : fulfilling, partially fulfilled',result.get('Response'));
     }
 
     @isTest(seeAllData=true)
@@ -172,7 +184,7 @@ private class SOM_WS_PickedInStoreShipmentHnadler_Test {
         System.debug(' $$ SOM_WS_PickedInStoreShipmentHnadler_Test.listRequestInputs :' + SOM_WS_PickedInStoreShipmentHnadler_Test.listRequestInputs);
         Map<String,Object> result1 = (Map<String,Object>) JSON.deserializeUntyped(RestContext.response.responseBody.tostring());
         System.debug('testact'+result1.get('Response'));
-        //System.assert(String.valueOf(result1.get('Response')).contains('isSuccess=true'));
+        System.assert(String.valueOf(result1.get('Response')).contains('isSuccess=true'));
     }
 
     @isTest(seeAllData=true)
@@ -199,7 +211,7 @@ private class SOM_WS_PickedInStoreShipmentHnadler_Test {
         System.debug(' $$ SOM_WS_PickedInStoreShipmentHnadler_Test.listRequestInputs :' + SOM_WS_PickedInStoreShipmentHnadler_Test.listRequestInputs);
         Map<String,Object> result1 = (Map<String,Object>) JSON.deserializeUntyped(RestContext.response.responseBody.tostring());
         System.debug('testact'+result1.get('Response'));
-        //System.assert(String.valueOf(result1.get('Response')).contains('isSuccess=true'));
+        System.assert(String.valueOf(result1.get('Response')).contains('isSuccess=true'));
     }
 
     @isTest(seeAllData=true)
@@ -226,7 +238,7 @@ private class SOM_WS_PickedInStoreShipmentHnadler_Test {
         System.debug(' $$ SOM_WS_PickedInStoreShipmentHnadler_Test.listRequestInputs :' + SOM_WS_PickedInStoreShipmentHnadler_Test.listRequestInputs);
         Map<String,Object> result1 = (Map<String,Object>) JSON.deserializeUntyped(RestContext.response.responseBody.tostring());
         System.debug('testact'+result1.get('Response'));
-        //System.assert(String.valueOf(result1.get('Response')).contains('list items to ship is empty'));
+        System.assert(String.valueOf(result1.get('Response')).contains('list items to ship is empty'));
     }
 
     @isTest(seeAllData=true)
@@ -253,7 +265,7 @@ private class SOM_WS_PickedInStoreShipmentHnadler_Test {
         System.debug(' $$ SOM_WS_PickedInStoreShipmentHnadler_Test.listRequestInputs :' + SOM_WS_PickedInStoreShipmentHnadler_Test.listRequestInputs);
         Map<String,Object> result1 = (Map<String,Object>) JSON.deserializeUntyped(RestContext.response.responseBody.tostring());
         System.debug('testact'+result1.get('Response'));
-        //System.assert(String.valueOf(result1.get('Response')).contains('no fulfillmentOrderLineItem exist with target SKU sku-9587461'));
+        System.assert(String.valueOf(result1.get('Response')).contains('no fulfillmentOrderLineItem exist with target SKU sku-9587461'));
     }
 
     @isTest(seeAllData=true)
@@ -280,7 +292,7 @@ private class SOM_WS_PickedInStoreShipmentHnadler_Test {
         System.debug(' $$ SOM_WS_PickedInStoreShipmentHnadler_Test.listRequestInputs :' + SOM_WS_PickedInStoreShipmentHnadler_Test.listRequestInputs);
         Map<String,Object> result1 = (Map<String,Object>) JSON.deserializeUntyped(RestContext.response.responseBody.tostring());
         System.debug('testact'+result1.get('Response'));
-        //System.assert(String.valueOf(result1.get('Response')).contains('Error: Quantity requested to ship is greater than Quantity Available for this SKU'));
+        System.assert(String.valueOf(result1.get('Response')).contains('Error: Quantity requested to ship is greater than Quantity Available for this SKU'));
     }
 
     @isTest(seeAllData=true)
@@ -307,7 +319,7 @@ private class SOM_WS_PickedInStoreShipmentHnadler_Test {
         System.debug(' $$ SOM_WS_PickedInStoreShipmentHnadler_Test.listRequestInputs :' + SOM_WS_PickedInStoreShipmentHnadler_Test.listRequestInputs);
         Map<String,Object> result1 = (Map<String,Object>) JSON.deserializeUntyped(RestContext.response.responseBody.tostring());
         System.debug('testact noserialitem'+result1.get('Response'));
-        //System.assert(String.valueOf(result1.get('Response')).contains('No serialNumber should provided for a non serialized product with this SKU'));
+        System.assert(String.valueOf(result1.get('Response')).contains('No serialNumber should provided for a non serialized product with this SKU'));
     }
 
     @isTest(seeAllData=true)
@@ -334,7 +346,7 @@ private class SOM_WS_PickedInStoreShipmentHnadler_Test {
         System.debug(' $$ SOM_WS_PickedInStoreShipmentHnadler_Test.listRequestInputs :' + SOM_WS_PickedInStoreShipmentHnadler_Test.listRequestInputs);
         Map<String,Object> result1 = (Map<String,Object>) JSON.deserializeUntyped(RestContext.response.responseBody.tostring());
         System.debug('testact'+result1.get('Response'));
-        //System.assert(String.valueOf(result1.get('Response')).contains('Error: Quantity requested to ship not equal the totale of serialNumbers'));
+        System.assert(String.valueOf(result1.get('Response')).contains('Error: Quantity requested to ship not equal the totale of serialNumbers'));
     }
 
     @isTest(seeAllData=true)
@@ -361,7 +373,7 @@ private class SOM_WS_PickedInStoreShipmentHnadler_Test {
         System.debug(' $$ SOM_WS_PickedInStoreShipmentHnadler_Test.listRequestInputs :' + SOM_WS_PickedInStoreShipmentHnadler_Test.listRequestInputs);
         Map<String,Object> result1 = (Map<String,Object>) JSON.deserializeUntyped(RestContext.response.responseBody.tostring());
         System.debug('testact'+result1.get('Response'));
-        //System.assert(String.valueOf(result1.get('Response')).contains('Missing serialNumbers for serialized product with this SKU'));
+        System.assert(String.valueOf(result1.get('Response')).contains('Missing serialNumbers for serialized product with this SKU'));
     }
 
     @isTest(seeAllData=true)
@@ -388,7 +400,7 @@ private class SOM_WS_PickedInStoreShipmentHnadler_Test {
         System.debug(' $$ SOM_WS_PickedInStoreShipmentHnadler_Test.listRequestInputs :' + SOM_WS_PickedInStoreShipmentHnadler_Test.listRequestInputs);
         Map<String,Object> result1 = (Map<String,Object>) JSON.deserializeUntyped(RestContext.response.responseBody.tostring());
         System.debug('testact'+result1.get('Response'));
-        //System.assert(String.valueOf(result1.get('Response')).contains('should be in fulling or partially fulfilled status'));
+        System.assert(String.valueOf(result1.get('Response')).contains('should be in fulling or partially fulfilled status'));
     }
 
     @isTest(seeAllData=true)
@@ -415,6 +427,6 @@ private class SOM_WS_PickedInStoreShipmentHnadler_Test {
         System.debug(' $$ SOM_WS_PickedInStoreShipmentHnadler_Test.listRequestInputs :' + SOM_WS_PickedInStoreShipmentHnadler_Test.listRequestInputs);
         Map<String,Object> result1 = (Map<String,Object>) JSON.deserializeUntyped(RestContext.response.responseBody.tostring());
         System.debug('testact'+result1.get('Response'));
-        //System.assert(String.valueOf(result1.get('Response')).contains('Error: this order Summary with the number'));
+        System.assert(String.valueOf(result1.get('Response')).contains('Error: this order Summary with the number'));
     }
 }
