Commit of Salesforce metadata by Gearset

--- a/unpackaged/main/default/classes/B2CIACustomerResolution.cls
+++ b/unpackaged/main/default/classes/B2CIACustomerResolution.cls
@@ -3,12 +3,14 @@
  * @date April 28th, 2021
  *
  * @description This class helps identify relevant duplicates for a contact which can be used to decide how to process updates or inserts
- * @Modifications : 
- * 2022-11-29 :  Method ConnectorBToCNewLogic() => add a return case, when contacts are found with the same email, and no B2C Customer ID or No, 
- *               return the first contact found ordered by created date  
- * @V2.0 : Modified by Abdelkhaled SAIDI
- * @V2.0 : date : February 17th, 2023
- * @V2.0 : Modifications : Method ConnectorBToCNewLogic() => changing the logic of matching contacts + Upgrade Version 57
+ ***************************************************************************************************************************************************************** 
+ * @Version : 
+ * Version	|	Date of modication	|	Modified By		|	Related Jira Ticket		|	Description of changes			
+ * 0.0		|	?					|	Eric Shcultz 	|	.						|	.original version B2C Eric Shcultz package
+ * 1.0		|	2022-11-29			|	.MA				|	.						|	.Viseo Method ConnectorBToCNewLogic() => add a return case, when contacts are found with the same email, and no B2C Customer ID or No, return the first contact found ordered by created date  
+ * 2.0		|	2023-02-17			|	.AS				|	.CI-74					|	.Devoteam : Method ConnectorBToCNewLogic() => changing the logic of matching contacts + Upgrade Version 57
+ * 2.1		|	2023-03-20			|	.PLM			|	.CI-163					|	.Rimowa : Query of ConnectorBToCNewLogic modified to remove null possibilities and remove all return case, by on return at the end of the method + add comments
+ *			|						|	.				|	.						|	.	
 */
 public inherited sharing class B2CIACustomerResolution {
 
@@ -20,9 +22,6 @@ public inherited sharing class B2CIACustomerResolution {
      */
     public static List<Contact> findDupes(Contact pContact) {
         return B2CIACustomerResolution.ConnectorBToCNewLogic(pContact);
-
-        
-
     }
     
     public static List<Contact> ConnectorBToCNewLogic(Contact contactToResolve) {
@@ -32,50 +31,59 @@ public inherited sharing class B2CIACustomerResolution {
         //Query return list of contacts have the same email of entred contact
         //******2022-11-29 Add Ordering by LastModifiedDate************
         //******2022-02-17 upgrade matching rules --> LastName && FirstName && (Email || Phone)************
-
-        List<Contact> matchedContactRecords = [Select Id, AccountId, B2C_CustomerList__c, B2C_CustomerList_ID__c, B2C_Customer_ID__c, 
-                                        B2C_Customer_No__c, FirstName, LastName, Email, Phone, B2C_Disable_Integration__c
-                                        From Contact where
-                                        (FirstName =: contactToResolve.FirstName AND LastName =: contactToResolve.LastName) 
-                                        AND 
-                                        (((Phone != null) AND (Phone =: contactToResolve.Phone)) 
-                                        OR
-                                        ((Email != null) AND (Email =: contactToResolve.Email)))
-                                        ORDER BY CreatedDate DESC];
+        //******2023-03-20 upgrade query to remove null possibilities 
+		String firstNameCondition = !String.isBlank(contactToResolve.FirstName) ? ' AND firstname = \'' + contactToResolve.FirstName + '\')' : ')';
+        String emailAndPhoneCondition = '';
+        //IF EMAIL AND PHONE
+        if(!String.isBlank(contactToResolve.Email) && !String.isBlank(contactToResolve.Phone))
+           emailAndPhoneCondition = ' AND (Email = \'' + contactToResolve.Email + '\' OR Phone = \'' +  contactToResolve.Phone + '\')';
+        //ELSE IF EMAIL BUT NO PHONE
+        else if(!String.isBlank(contactToResolve.Email) && String.isBlank(contactToResolve.Phone))
+           emailAndPhoneCondition = ' AND Email = \'' + contactToResolve.Email + '\'';
+        //ELSE IF PHONE BUT NO EMAIL
+        else if(String.isBlank(contactToResolve.Email) && !String.isBlank(contactToResolve.Phone))
+           emailAndPhoneCondition = ' AND Phone = \'' +  contactToResolve.Phone + '\'';
+        else return null;//IF No Email AND NO Phone Reject the rest of the Method
         
-        if(matchedContactRecords.size()==1){
-            return matchedContactRecords;
-        }
+        String query = 'Select Id, AccountId, B2C_CustomerList__c, B2C_CustomerList_ID__c, B2C_Customer_ID__c,'+ 
+                       'B2C_Customer_No__c, FirstName, LastName, Email, Phone, B2C_Disable_Integration__c, 	B2C_Date_Last_Modified__c '+
+                       'From Contact where (LastName = \'' + contactToResolve.LastName + '\''
+            			+ firstNameCondition + emailAndPhoneCondition + ' ORDER BY CreatedDate DESC ';
+        System.debug('*** B2CIACustomerResolution.ConnectorBToCNewLogic() Query : ' + query);
+        List<Contact> matchedContactRecords = Database.query(query, AccessLevel.SYSTEM_MODE);
+        
+        //Case 1 : One Contact Found => Return the found contact
+        if(matchedContactRecords.size()==1) contactListToReturn = matchedContactRecords;
+        
+        //Case 2 : Multiple Contact Found
         else if(matchedContactRecords.size()>1){
             //Look for contacts with B2C Ids
             for(Contact contactLine : matchedContactRecords){
                 if(contactLine.B2C_Customer_ID__c != null && contactLine.B2C_Customer_No__c != null){
                     contactsListWithIds.put(contactLine.Id,contactLine);
-                    
                 }
             }
-            //IF one contact with B2C Ids is Found return it
+            //Case 2.1 : IF one contact with B2C Ids is Found return it
             if(contactsListWithIds.size()==1){
-                return contactsListWithIds.values();
+                contactListToReturn = contactsListWithIds.values();
             }
-            //IF multiple contact with B2C Ids is Found return the last modified
+            //Case 2.2 : IF multiple contact with B2C Ids are Found return the First Created
             else if(contactsListWithIds.size()>1){
-                    return  [Select Id, AccountId, B2C_CustomerList__c, B2C_CustomerList_ID__c, B2C_Customer_ID__c, 
-                    B2C_Customer_No__c, FirstName, LastName, Email, Phone, B2C_Disable_Integration__c
+                    contactListToReturn = [Select Id, AccountId, B2C_CustomerList__c, B2C_CustomerList_ID__c, B2C_Customer_ID__c, 
+                    B2C_Customer_No__c, FirstName, LastName, Email, Phone, 	B2C_Date_Last_Modified__c
                      From Contact
                      Where Id IN : contactsListWithIds.keySet()
                      ORDER BY createdDate DESC
                      limit 1];
-                    
             }
-            //No contact with B2C Ids return the first matched contact by Query
-            else{
-                    return new List<Contact>{matchedContactRecords.get(0)};
-                }
+            //Case 2.3 : No contact with B2C Ids return the first matched contact by Query
+            else contactListToReturn.add(matchedContactRecords.get(0));
         }
-        else{
-            return contactListToReturn;
-        }
+        //Case 3 : No contact Found by the Query => Return an empty list
+        else contactListToReturn = new List<Contact>();
+        
+        return contactListToReturn;
+        
     }
     
     
